# notes-app

./: Cargo.toml  README.md  requirements.txt  textual_notes.py  textual_notes.tcss
.github/workflows/: ci.yml
crates/notes-render/: Cargo.toml
crates/notes-render/src/: formula.rs  lib.rs  markdown.rs
crates/notes-tui/: Cargo.toml
crates/notes-tui/src/: main.rs
crates/notes-vault/: Cargo.toml
crates/notes-vault/src/: frontmatter.rs  lib.rs  note.rs  parser.rs  vault.rs
crates/notes-vault/tests/: sample_vault.rs
vault/notes/: 01-graphrag-intro.md  02-graphrag-architecture.md  03-knowledge-graphs.md  04-leiden-algorithm.md  05-entity-extraction.md  06-vector-embeddings.md  07-rag-vs-graphrag.md  08-applications.md  09-indexing-pipeline.md  10-query-processing.md  11-agentic-rag.md  12-rag-evaluation.md  13-advanced-retrieval.md
