[package]
name = "notes-render"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mathjax-svg-rs.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
resvg.workspace = true
thiserror.workspace = true
unicode-width.workspace = true
