[package]
name = "notes-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
image.workspace = true
notes-render = { path = "../notes-render" }
notes-vault = { path = "../notes-vault" }
ratatui.workspace = true
ratatui-image.workspace = true
sha1.workspace = true
